--- a/action.yml
+++ b/action.yml
@@ -11,22 +11,10 @@
 #runs:
 #  using: 'node16'
 #  main: 'dist/index.js'
-name: autotag
-
-on:
-  push:
-    branches:
-      - '*'
-    tags-ignore:
-      - '*'
-  pull_request:
-
-jobs:
-  setup:
-    name: Code setup
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: list tags
-        run: git tag
+name: 'Hello World'
+description: 'Autotag'
+runs:
+  using: "composite"
+  steps:
+    - run: main.sh
+      shell: bash
