--- a/action.yml
+++ b/action.yml
@@ -1,24 +1,9 @@
-#name: 'Hello World'
-#description: 'Greet someone and record the time'
-#inputs:
-#  who-to-greet:  # id of input
-#    description: 'Who to greet'
-#    required: true
-#    default: 'World'
-#outputs:
-#  time: # id of output
-#    description: 'The time we greeted you'
-#runs:
-#  using: 'node16'
-#  main: 'dist/index.js'
 name: 'Hello World'
 description: 'Autotag'
 runs:
   using: "composite"
   steps:
-    - run: git log > tags.txt
+    - run: git log > git_log.txt
       shell: bash
-    - run: cat tags.txt
-      shell: bash
-    - run: node ${{ github.action_path }}/calc.js
+    - run: node ${{ github.action_path }}/parse_log.js
       shell: bash
