--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,9 @@ description: 'Autotag'
 runs:
   using: "composite"
   steps:
-    - run: git log > git_log.txt
+    - run: git log --pretty=oneline > git_log.txt
+      shell: bash
+    - run: cat git_log.txt
       shell: bash
     - run: node ${{ github.action_path }}/parse_log.js
       shell: bash
