--- a/action.yml
+++ b/action.yml
@@ -3,9 +3,17 @@ description: 'Autotag'
 runs:
   using: "composite"
   steps:
-    - run: git log --pretty=oneline > git_log.txt
+    # get logs in compact form to extract the #major, #minor, #patch labels
+    - run: git log --pretty=oneline > ${{ github.action_path }}/git_log.txt
       shell: bash
-    - run: cat git_log.txt
+    # get latest tag
+    - run: git describe --tags --abbrev=0 > ${{ github.action_path }}/git tag.txt
       shell: bash
+    - run: cat ${{ github.action_path }}/git_log.txt
+      shell: bash
+    # calculate nex tag
     - run: node ${{ github.action_path }}/parse_log.js
+      shell: bash
+    # apply new tag
+    - run: bash ${{ github.action_path }}/commands.txt
       shell: bash
