--- a/action.yml
+++ b/action.yml
@@ -4,16 +4,16 @@ runs:
   using: "composite"
   steps:
     # get logs in compact form to extract the #major, #minor, #patch labels
-    - run: git log --pretty=oneline > ${{ github.action_path }}/git_log.txt
+    - run: git log --pretty=oneline >  git_log.txt
       shell: bash
     # get latest tag
-    - run: git describe --tags --abbrev=0 > ${{ github.action_path }}/git_tag.txt
+    - run: git describe --tags --abbrev=0 > git_tag.txt
       shell: bash
-    - run: cat ${{ github.action_path }}/git_log.txt
+    - run: cat git_log.txt
       shell: bash
     # calculate nex tag
     - run: node ${{ github.action_path }}/parse_log.js
       shell: bash
     # apply new tag
-    - run: bash ${{ github.action_path }}/commands.txt
+    - run: bash commands.txt
       shell: bash
