--- a/action.yml
+++ b/action.yml
@@ -6,10 +6,14 @@ runs:
     # get logs in compact form to extract the #major, #minor, #patch labels
     - run: git log --pretty=oneline >  git_log.txt
       shell: bash
+    - run: cat git_log.txt
+      shell: bash
     # get latest tag
     - run: git describe --tags --abbrev=0 > git_tag.txt
       shell: bash
-    - run: cat git_log.txt
+    - run: cat git_tag.txt
+      shell: bash
+    - run: git tag
       shell: bash
     # calculate nex tag
     - run: node ${{ github.action_path }}/parse_log.js
