empty file to avoid error when there's nothing to do

--- a/action.yml
+++ b/action.yml
@@ -3,6 +3,8 @@ description: 'Autotag'
 runs:
   using: "composite"
   steps:
+    # dummy file
+    - run: touch commands.txt
     # get logs in compact form to extract the #major, #minor, #patch labels
     - run: git log --decorate=full --pretty=oneline >  git_log.txt
       shell: bash
