--- a/action.yml
+++ b/action.yml
@@ -26,9 +26,9 @@ runs:
     - run: cat newtag.txt >> $GITHUB_OUTPUT
       id: output-newtag
       shell: bash
-    - run: echo $INPUT_DOIT
+    - run: echo env
       shell: bash
     # apply new tag
     - run: bash commands.txt
       shell: bash
-      if: $INPUT_DOIT == true
+      if: github.event.inputs.doit
